# wasmio-2024-demos

./: README.md
composition-sample/: Makefile  README.md  build.sh  start-acme.sh  start-cyberdyne.sh  start-wonka.sh  tests.restbook
composition-sample/.demo/: demo.json
composition-sample/acme/: Cargo.toml  Makefile  spin.toml
composition-sample/acme-product/: Cargo.toml  spin.toml
composition-sample/acme-product/src/: bindings.rs  lib.rs
composition-sample/acme-product/wit/: world.wit
composition-sample/acme/src/: lib.rs  registrations.rs
composition-sample/cyberdyne/: Cargo.toml  Makefile  migration.sql  spin.toml
composition-sample/cyberdyne-3rd-party-service/: Cargo.toml
composition-sample/cyberdyne-3rd-party-service/src/: lib.rs
composition-sample/cyberdyne-3rd-party-service/wit/: world.wit
composition-sample/cyberdyne/src/: bindings.rs
composition-sample/hmac/: Cargo.toml
composition-sample/hmac/src/: lib.rs
composition-sample/hmac/wit/: world.wit
composition-sample/wonka/: app.py
composition-sample/wonka-3rd-party-service/: app.py  spin.toml
composition-sample/wonka-3rd-party-service/wit/: world.wit
extensibility/: Makefile  README.md
extensibility/plugins/lowercase/: .gitignore  Makefile  lowercase.py  requirements.txt
extensibility/plugins/obfuscate/: Cargo.toml
extensibility/plugins/obfuscate/src/: bindings.rs  lib.rs
extensibility/plugins/obfuscate/wit/: wasmio.wit
extensibility/plugins/reverse/: reverse.js
extensibility/plugins/uppercase/: Cargo.toml
extensibility/plugins/uppercase/src/: bindings.rs  lib.rs
extensibility/transformer/: Cargo.toml
extensibility/transformer/src/: main.rs
extensibility/transformer/wit/: wasmio.wit
