[package]
name = "consumer"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
data-encoding = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
spin-sdk = "2.2.0"
wit-bindgen = "0.19.1"


[workspace]
[package.metadata.component]
package = "fermyon:webhooks-consumer"

[package.metadata.component.target.dependencies]
"fermyon:hmac" = { path = "../hmac/wit" }
