[package]
name = "uppercase"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.24.0", default-features = false, features = [
    "realloc",
] }
wit-bindgen-rt = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmio:samples"

[package.metadata.component.dependencies]
